added junits and unit testing