@@ -1,5 +1,21 @@
-## HOW TO RUN ##
+# Critter Chase
 
->> set FX=C:\Users\katie\Downloads\Katie\Projects\JavaFX\javafx-sdk-21.0.12\lib
->> javac --module-path "C:\Users\katie\Downloads\Katie\Projects\JavaFX\javafx-sdk-21.0.12\lib" --add-modules javafx.controls,javafx.fxml -d bin (Get-ChildItem -Recurse -Filter *.java src).FullName
->> java --module-path "C:\Users\katie\Downloads\Katie\Projects\JavaFX\javafx-sdk-21.0.12\lib" --add-modules javafx.controls,javafx.fxml -cp "bin" Main
+CritterChase is a Java-based game built with JavaFX. Players navigate through levels, avoid enemies, collect food to earn points, and progress through the game.
+
+## Requirements
+
+- Java Development Kit (JDK) 21
+- Apache Maven
+- Visual Studio Code or another Java-compatible IDE
+
+## Verifying Java and Maven Installation
+- java -version
+- javac -version
+- mvn -version
+
+## Running the Game
+- mvn clean compile
+- mvn javafx:run
+
+## Running the Tests
+- mvn test or mvn clean test
